find_package(CMocka)

enable_testing()

include_directories(${PROJECT_SOURCE_DIR})
include_directories(/usr/local/include)

set_source_files_properties(
    jsmn_test.c
    json_test.c
    PROPERTIES
        COMPILE_DEFINITIONS UNIT_TESTING)

add_executable(jsmn_test_default
  jsmn_test.c
)
target_compile_definitions(jsmn_test_default PRIVATE JSMN_DEFINES)
target_link_libraries(jsmn_test_default ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_default COMMAND jsmn_test_default)

add_executable(jsmn_test_permissive
  jsmn_test.c
)
target_compile_definitions(jsmn_test_permissive PRIVATE JSMN_DEFINES JSMN_PERMISSIVE)
target_link_libraries(jsmn_test_permissive ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_permissive COMMAND jsmn_test_permissive)

add_executable(jsmn_test_links
  jsmn_test.c
)
target_compile_definitions(jsmn_test_links PRIVATE JSMN_DEFINES JSMN_PARENT_LINKS)
target_link_libraries(jsmn_test_links ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_links COMMAND jsmn_test_links)

add_executable(jsmn_test_permissive_links
  jsmn_test.c
)
target_compile_definitions(jsmn_test_permissive_links PRIVATE JSMN_DEFINES JSMN_PERMISSIVE JSMN_PARENT_LINKS)
target_link_libraries(jsmn_test_permissive_links ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_permissive_links COMMAND jsmn_test_permissive_links)

add_executable(jsmn_test_short_default
  jsmn_test.c
)
target_compile_definitions(jsmn_test_short_default PRIVATE JSMN_DEFINES JSMN_SHORT_TOKENS)
target_link_libraries(jsmn_test_short_default ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_short_default COMMAND jsmn_test_short_default)

add_executable(jsmn_test_short_permissive
  jsmn_test.c
)
target_compile_definitions(jsmn_test_short_permissive PRIVATE JSMN_DEFINES JSMN_SHORT_TOKENS JSMN_PERMISSIVE)
target_link_libraries(jsmn_test_short_permissive ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_short_permissive COMMAND jsmn_test_short_permissive)

add_executable(jsmn_test_short_links
  jsmn_test.c
)
target_compile_definitions(jsmn_test_short_links PRIVATE JSMN_DEFINES JSMN_SHORT_TOKENS JSMN_PARENT_LINKS)
target_link_libraries(jsmn_test_short_links ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_short_links COMMAND jsmn_test_short_links)

add_executable(jsmn_test_short_permissive_links
  jsmn_test.c
)
target_compile_definitions(jsmn_test_short_permissive_links PRIVATE JSMN_DEFINES JSMN_SHORT_TOKENS JSMN_PERMISSIVE JSMN_PARENT_LINKS)
target_link_libraries(jsmn_test_short_permissive_links ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_short_permissive_links COMMAND jsmn_test_short_permissive_links)

add_executable(jsmn_test_sibling_short_default
  jsmn_test.c
)
target_compile_definitions(jsmn_test_sibling_short_default PRIVATE JSMN_DEFINES JSMN_NEXT_SIBLING JSMN_SHORT_TOKENS)
target_link_libraries(jsmn_test_sibling_short_default ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_sibling_short_default COMMAND jsmn_test_sibling_short_default)

add_executable(jsmn_test_sibling_short_permissive
  jsmn_test.c
)
target_compile_definitions(jsmn_test_sibling_short_permissive PRIVATE JSMN_DEFINES JSMN_NEXT_SIBLING JSMN_SHORT_TOKENS JSMN_PERMISSIVE)
target_link_libraries(jsmn_test_sibling_short_permissive ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_sibling_short_permissive COMMAND jsmn_test_sibling_short_permissive)

add_executable(jsmn_test_sibling_short_links
  jsmn_test.c
)
target_compile_definitions(jsmn_test_sibling_short_links PRIVATE JSMN_DEFINES JSMN_NEXT_SIBLING JSMN_SHORT_TOKENS JSMN_PARENT_LINKS)
target_link_libraries(jsmn_test_sibling_short_links ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_sibling_short_links COMMAND jsmn_test_sibling_short_links)

add_executable(jsmn_test_sibling_short_permissive_links
  jsmn_test.c
)
target_compile_definitions(jsmn_test_sibling_short_permissive_links PRIVATE JSMN_DEFINES JSMN_NEXT_SIBLING JSMN_SHORT_TOKENS JSMN_PERMISSIVE JSMN_PARENT_LINKS)
target_link_libraries(jsmn_test_sibling_short_permissive_links ${CMOCKA_LIBRARY})
add_test(NAME jsmn_test_sibling_short_permissive_links COMMAND jsmn_test_sibling_short_permissive_links)
